--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,10 @@
   -->
 
 <resources>
-    <string name="app_name">RSS Parser</string>
+    <string name="app_name">Piztu Lizarra</string>
     <string name="action_about">About</string>
-    <string name="alert_title">Attention!</string>
-    <string name="alert_message">Unable to load data. \nCheck your connection!</string>
+    <string name="alert_title">Atención!</string>
+    <string name="alert_message">Imposible cargar el contenido. \nRevisa tu conexión a internet!</string>
     <string name="alert_positive">Close</string>
     <string name="video">Video</string>
      <string name="info_text">This is a simple app that shows the use of RSS Parse library.
