--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,19 @@
 
 <resources>
     <string name="app_name">Piztu Lizarra</string>
+
     <string name="action_about">About</string>
+    <string name="action_blog">Blog</string>
+    <string name="action_facebook">Facebook</string>
+    <string name="action_instagram">Instagram</string>
+    <string name="action_twitter">Twitter</string>
+    <string name="action_mail">Mail</string>
+
     <string name="alert_title">Atención!</string>
     <string name="alert_message">Imposible cargar el contenido. \nRevisa tu conexión a internet!</string>
     <string name="alert_positive">Close</string>
     <string name="video">Video</string>
-     <string name="info_text">This is a simple app that shows the use of RSS Parse library.
+     <string name="info_text">App para estar informad@ en todo momento de el blog Lizarrako Gaztetxea.
          &lt;br /&gt;&lt;br /&gt;You can find the source code on </string>
     <string name="author">&lt;br /&gt;&lt;br /&gt;Written by Marco Gomiero</string>
 </resources>
